--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
         <div class="page-content">
             <h1 class="congrats-title">🎉 恭喜您已通关！👇</h1>
 
-<a class="congrats-message" href="https://t.me/iOSAWJL" target="_blank">🎁祝您圣诞节快乐🎁</a>
+<a class="congrats-message" href="https://d1.mk/12$25" target="_blank">🎁长按我领取圣诞礼物🎁</a>
 
             
             <div class="stats-box">
